--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kanban",
   "version": "0.1.0",
+  "homepage": "https://vncsreis.github.io/kanbasic",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
@@ -27,6 +28,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "depoly": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -65,6 +68,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.5.1"
   }
 }
